--- a/index.html
+++ b/index.html
@@ -48,19 +48,72 @@
                 <h1>OUR CREATIONS</h1>
                 <a href="index.html" class="btn">SEE ALL</a>
             </div>
+            <div class="creations grid grid-4">
+                <div class="grid-content">
+                    <img src="images/desktop/image-deep-earth.jpg" alt="">
+                    <div class="content-text">DEEP EARTH</div>
+                </div>
+                <div class="grid-content">
+                    <img src="images/desktop/image-night-arcade.jpg" alt="">
+                    <div class="content-text">NIGHT ARCADE</div>
+                </div>
+                <div class="grid-content">
+                    <img src="images/desktop/image-soccer-team.jpg" alt="">
+                    <div class="content-text">SOCCER TEAM VR</div>
+                </div>
+                <div class="grid-content">
+                    <img src="images/desktop/image-grid.jpg" alt="">
+                    <div class="content-text">THE GRID</div>
+                </div>
+                <div class="grid-content">
+                    <img src="images/desktop/image-from-above.jpg" alt="">
+                    <div class="content-text">FROM ABOVE VR</div>
+                </div>
+                <div class="grid-content">
+                    <img src="images/desktop/image-pocket-borealis.jpg" alt="">
+                    <div class="content-text">POCKET BOREALIS</div>
+                </div>
+                <div class="grid-content">
+                    <img src="images/desktop/image-curiosity.jpg" alt="">
+                    <div class="content-text">THE CURIOSITY</div>
+                </div>
+                <div class="grid-content">
+                    <img src="images/desktop/image-fisheye.jpg" alt="">
+                    <div class="content-text">MAKE IT FISHEYE</div>
+                </div>
+            </div>
         </div>
     </section>
-    Our creations See all Deep
-    earth Night arcade Soccer team VR The grid From up above VR Pocket borealis
-    The curiosity Make it fisheye About Careers Events Products Support © 2021
-    Loopstudios. All rights reserved.
 
-    <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-            href="#">Your
-            Name Here</a>.
-    </div>
+    <footer>
+        <div class="container">
+            <div class="footer flex">
+                <img src="images/logo.svg" alt="">
+                <ul class="socials flex">
+                    <li><a href="index.html"><img src="images/icon-facebook.svg" alt=""></a></li>
+                    <li><a href="index.html"><img src="images/icon-twitter.svg" alt=""></a></li>
+                    <li><a href="index.html"><img src="images/icon-pinterest.svg" alt=""></a></li>
+                    <li><a href="index.html"><img src="images/icon-instagram.svg" alt=""></a></li>
+                </ul>
+            </div>
+            <div class="footer flex">
+                <ul class="flex bottom">
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Events</a></li>
+                    <li><a href="index.html">Career</a></li>
+                    <li><a href="index.html">Products</a></li>
+                    <li><a href="index.html">Support</a></li>
+                </ul>
+                <p class="copyright">© 2021
+                    Loopstudios. All rights reserved.</p>
+            </div>
+        </div>
+        <div class="attribution">
+            Challenge by
+            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+                href="https://github.com/hisyamsk">Hisyam Setiadi Kurniawan</a>.
+        </div>
+    </footer>
 </body>
 
 </html>
