--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         <div class="container">
             <nav class="navbar flex">
                 <img src="images/logo.svg" alt="">
-                <ul class="flex">
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="index.html">Events</a></li>
-                    <li><a href="index.html">Career</a></li>
-                    <li><a href="index.html">Products</a></li>
-                    <li><a href="index.html">Support</a></li>
-                </ul>
+                <div class="navbar-links">
+                    <ul class="flex">
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="index.html">Events</a></li>
+                        <li><a href="index.html">Career</a></li>
+                        <li><a href="index.html">Products</a></li>
+                        <li><a href="index.html">Support</a></li>
+                    </ul>
+                </div>
             </nav>
             <div class="header-text">
                 <h1>IMMERSIVE EXPERIENCES THAT DELIVER</h1>
@@ -31,7 +33,8 @@
 
     <section class="showcase">
         <div class="container grid">
-            <img src="images/desktop/image-interactive.jpg" alt="">
+            <img src="images/desktop/image-interactive.jpg" alt="" class="desktop-img">
+            <img src="images/mobile/image-interactive.jpg" alt="" class="mobile-img">
             <div class="showcase-text">
                 <h1>THE LEADER IN INTERACTIVE VR</h1>
                 <p>Founded in 2011, Loopstudios has been producing
@@ -46,66 +49,77 @@
         <div class="container">
             <div class="creations flex">
                 <h1>OUR CREATIONS</h1>
-                <a href="index.html" class="btn">SEE ALL</a>
+                <a href="index.html" class="btn desktop-img">SEE ALL</a>
             </div>
-            <div class="creations grid grid-4">
+            <div class="creations grid grid-4 desktop">
                 <div class="grid-content">
-                    <img src="images/desktop/image-deep-earth.jpg" alt="">
-                    <div class="content-text">DEEP EARTH</div>
+                    <img src="images/desktop/image-deep-earth.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-deep-earth.jpg" alt="" class="mobile-img">
+                    <div class="content-text">DEEP<br>EARTH</div>
                 </div>
                 <div class="grid-content">
-                    <img src="images/desktop/image-night-arcade.jpg" alt="">
-                    <div class="content-text">NIGHT ARCADE</div>
+                    <img src="images/desktop/image-night-arcade.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-night-arcade.jpg" alt="" class="mobile-img">
+                    <div class="content-text">NIGHT<br>ARCADE</div>
                 </div>
                 <div class="grid-content">
-                    <img src="images/desktop/image-soccer-team.jpg" alt="">
-                    <div class="content-text">SOCCER TEAM VR</div>
+                    <img src="images/desktop/image-soccer-team.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-soccer-team.jpg" alt="" class="mobile-img">
+                    <div class="content-text">SOCCER<br>TEAM VR</div>
                 </div>
                 <div class="grid-content">
-                    <img src="images/desktop/image-grid.jpg" alt="">
-                    <div class="content-text">THE GRID</div>
+                    <img src="images/desktop/image-grid.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-grid.jpg" alt="" class="mobile-img">
+                    <div class="content-text">THE<br>GRID</div>
                 </div>
                 <div class="grid-content">
-                    <img src="images/desktop/image-from-above.jpg" alt="">
-                    <div class="content-text">FROM ABOVE VR</div>
+                    <img src="images/desktop/image-from-above.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-from-above.jpg" alt="" class="mobile-img">
+                    <div class="content-text">FROM UP ABOVE VR</div>
                 </div>
                 <div class="grid-content">
-                    <img src="images/desktop/image-pocket-borealis.jpg" alt="">
-                    <div class="content-text">POCKET BOREALIS</div>
+                    <img src="images/desktop/image-pocket-borealis.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-pocket-borealis.jpg" alt="" class="mobile-img">
+                    <div class="content-text">POCKET<br>BOREALIS</div>
                 </div>
                 <div class="grid-content">
-                    <img src="images/desktop/image-curiosity.jpg" alt="">
-                    <div class="content-text">THE CURIOSITY</div>
+                    <img src="images/desktop/image-curiosity.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-curiosity.jpg" alt="" class="mobile-img">
+                    <div class="content-text">THE<br>CURIOSITY</div>
                 </div>
                 <div class="grid-content">
-                    <img src="images/desktop/image-fisheye.jpg" alt="">
+                    <img src="images/desktop/image-fisheye.jpg" alt="" class="desktop-img">
+                    <img src="images/mobile/image-fisheye.jpg" alt="" class="mobile-img">
                     <div class="content-text">MAKE IT FISHEYE</div>
                 </div>
+                <a href="index.html" class="btn btn-bottom mobile-img">SEE ALL</a>
             </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <div class="footer flex">
-                <img src="images/logo.svg" alt="">
-                <ul class="socials flex">
-                    <li><a href="index.html"><img src="images/icon-facebook.svg" alt=""></a></li>
-                    <li><a href="index.html"><img src="images/icon-twitter.svg" alt=""></a></li>
-                    <li><a href="index.html"><img src="images/icon-pinterest.svg" alt=""></a></li>
-                    <li><a href="index.html"><img src="images/icon-instagram.svg" alt=""></a></li>
-                </ul>
-            </div>
-            <div class="footer flex">
-                <ul class="flex bottom">
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="index.html">Events</a></li>
-                    <li><a href="index.html">Career</a></li>
-                    <li><a href="index.html">Products</a></li>
-                    <li><a href="index.html">Support</a></li>
-                </ul>
-                <p class="copyright">© 2021
-                    Loopstudios. All rights reserved.</p>
+            <div class="footer grid">
+                <div class="footer-1">
+                    <img src="images/logo.svg" alt="">
+                    <ul class="flex bottom">
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="index.html">Events</a></li>
+                        <li><a href="index.html">Career</a></li>
+                        <li><a href="index.html">Products</a></li>
+                        <li><a href="index.html">Support</a></li>
+                    </ul>
+                </div>
+                <div class="footer-2">
+                    <ul class="socials flex">
+                        <li><a href="index.html"><img src="images/icon-facebook.svg" alt=""></a></li>
+                        <li><a href="index.html"><img src="images/icon-twitter.svg" alt=""></a></li>
+                        <li><a href="index.html"><img src="images/icon-pinterest.svg" alt=""></a></li>
+                        <li><a href="index.html"><img src="images/icon-instagram.svg" alt=""></a></li>
+                    </ul>
+                    <p class="copyright">© 2021
+                        Loopstudios. All rights reserved.</p>
+                </div>
             </div>
         </div>
         <div class="attribution">
