--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container pd-0">
             <nav class="navbar flex">
                 <img src="images/logo.svg" alt="">
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
                 <div class="navbar-links">
                     <ul class="flex">
                         <li><a href="index.html">About</a></li>
@@ -25,8 +30,10 @@
                     </ul>
                 </div>
             </nav>
-            <div class="header-text">
-                <h1>IMMERSIVE EXPERIENCES THAT DELIVER</h1>
+            <div class="container-2">
+                <div class="header-text">
+                    <h1>IMMERSIVE EXPERIENCES THAT DELIVER</h1>
+                </div>
             </div>
         </div>
     </header>
@@ -128,6 +135,8 @@
                 href="https://github.com/hisyamsk">Hisyam Setiadi Kurniawan</a>.
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
